<resources>
    <string name="app_name">FoodTruckApp</string>
    <string name="title_activity_user_main_menu">UserMainMenuActivity</string>
    <string name="type_of_register_prompt">Register as:</string>
    <string name="typeOfUser_prompt">Choose a country</string>
    <string name="title_activity_vendor_profile_practice">VendorProfilePracticeActivity</string>
    <string-array name="vendor_open_time_options">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="vendor_close_time_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="vendor_open_period_options">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="vendor_close_period_options">
        <item>PM</item>
    </string-array>

    <string name="Hours"><u>Hours</u></string>
    <string name="Menu"><u>Menu</u></string>
    <string name="Weekdays"><i>Mondays - Fridays:</i></string>
    <string name="Weekends"><i>Saturdays and Sundays:</i></string>
    <string name="Reviews"><u>My Reviews</u></string>
    <string name="Rating"><u>My Rating</u></string>

    <string name="TheirReveiws"><u>Reviews</u></string>
    <string name="TheierRating"><u>Rating</u></string>

    <string name="facebook_app_id">309905269442288</string>

    <string name="app_id">906039078080-2cmjii5bqjti72ftpn5ff8if80725brj.apps.googleusercontent.com</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>

    <string name="large_text_1">
    "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
    </string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_vendor_profile">VendorProfileActivity</string>
    <string name="title_activity_customer_order_mgmdemo">CustomerOrderMGMDemo</string>
    <string name="title_activity_maps">Map</string>

    <string name="ftnear_map_button">Map View</string>

    <string name="active_toggle_active">Active</string>
    <string name="active_toggle_inactive">Inactive</string>
    <string name="set_location">Set Location</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="no_pw_yet">No account yet? Create one</string>
    <string name="password_hint">Password</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_ready">Order Is Ready!</string>
    <string name="done">Done</string>
    <string name="no_show">No Show</string>
    <string name="zero">$00.00</string>
    <string name="near_me">Food Trucks Near Me</string>
    <string name="my_favorite_trucks">My Favorite Trucks</string>
    <string name="sign_out">Sign Out</string>
    <string name="total">Total:</string>
    <string name="top_food_trucks">Top Food Trucks</string>
    <string name="share">Share with friends</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_share_email">ShareEmailActivity</string>
    <string name="send_email">Send email</string>
    <string name="main_text_share_email">Help friends find food trucks near them!</string>
    <string name="email_subject">Food trucks near you</string>
    <string name="social_feed">Social Feed</string>
    <string name="search_food"> Search for Food</string>
    <string name="favorites_text"> Here are the food trucks you\'ve favorited:</string>
    <string name="email_content">
        Do you hate waiting in line at your favorite food truck? \n
        Do you want to know what food trucks are open near you? \n\n

        No problem! Click the link below to try this unique experience!
    </string>


</resources>
