<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.upenn.cis350.foodtruckapp.VendorProfileActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="0.12"
            android:layout_height="200dp"
            android:id="@+id/cust_vendor_profile_image"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/Hours"
            android:textSize="30sp"
            android:textColor="@color/BLACK"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:id="@+id/textView"
            android:text="@string/Weekdays"
            android:textSize="20sp"
            android:textColor="@color/BLACK" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:id="@+id/customer_vendor_open_weekday_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.48" />

                <TextView
                    android:id="@+id/customer_vendor_open_weekday_period"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"></TextView>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="  -"
                    android:textColor="@color/BLACK"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/customer_vendor_close_weekday_time"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14"></TextView>

                <TextView
                    android:id="@+id/customer_vendor_close_weekday_period"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.40"></TextView>

            </LinearLayout>

            <TextView
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.43"
                android:id="@+id/textView2"
                android:text="@string/Weekends"
                android:textSize="20sp"
                android:textColor="@color/BLACK" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:id="@+id/customer_vendor_open_weekend_time"
                    android:layout_width="106dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.42"></TextView>

                <TextView
                    android:id="@+id/customer_vendor_open_weekend_period"
                    android:layout_width="68dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.11"></TextView>

                <TextView
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:text="  -"
                    android:textSize="30sp"
                    android:textColor="@color/BLACK"
                    android:layout_margin="0dp" />

                <TextView
                    android:id="@+id/customer_vendor_close_weekend_time"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.11"></TextView>

                <TextView
                    android:id="@+id/customer_vendor_close_weekend_period"
                    android:layout_width="78dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.24"></TextView>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:text="@string/Menu"
            android:textSize="30sp"
            android:textColor="@color/BLACK"
            android:layout_weight="0.03"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp" />


        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cust_menu">
        </ListView>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="0.03"
            android:text="@string/TheirReveiws"
            android:textAlignment="center"
            android:textColor="@color/BLACK"
            android:textSize="30sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView6"
                android:text="@string/large_text"
                android:textSize="12sp"
                android:textColor="@color/BLACK"
                android:layout_weight="0.03"
                android:layout_marginTop="15dp" />

            <View
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_alignLeft="@id/textView6"
                android:layout_alignRight="@id/textView6"
                android:layout_alignBottom="@id/textView6"></View>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="0.03"
                android:text="@string/large_text_1"
                android:textColor="@color/BLACK"
                android:textSize="12sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="0.03"
            android:text="Leave a Rating!"
            android:textAlignment="center"
            android:textColor="@color/BLACK"
            android:textSize="10pt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dividerPadding="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/rating1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_style"
                android:padding="5dp"
                android:text="1 Star" />

            <Button
                android:id="@+id/rating2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/rating1"
                android:layout_below="@+id/rating1"
                android:background="@drawable/button_style"
                android:text="2 Star" />

            <Button
                android:id="@+id/rating3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/rating2"
                android:layout_below="@+id/rating2"
                android:background="@drawable/button_style"
                android:text="3 Star" />

            <Button
                android:id="@+id/rating4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/rating3"
                android:layout_below="@+id/rating3"
                android:background="@drawable/button_style"
                android:text="4 Star" />

        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
