<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.upenn.cis350.foodtruckapp.VendorProfileActivity"
    tools:showIn="@layout/activity_vendor_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/vendor_profile_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.12"
            android:text="Please select an image for your truck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/Hours"
            android:textAlignment="center"
            android:textColor="@color/BLACK"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/Weekdays"
            android:textColor="@color/BLACK"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_open_weekday_time"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_open_weekday_period"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <TextView
                    android:id="@+id/dash"
                    android:layout_width="45dp"
                    android:layout_height="53dp"
                    android:layout_marginTop="72dp"
                    android:text="  -"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/BLACK"
                    android:textSize="30sp" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_close_weekday_time"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_close_weekday_period"
                    android:layout_height="wrap_content">
                </NumberPicker>
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.43"
                android:text="@string/Weekends"
                android:textColor="@color/BLACK"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_open_weekend_time"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_open_weekend_period"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <TextView
                    android:id="@+id/dash1"
                    android:layout_width="45dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="72dp"
                    android:text="  -"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/BLACK"
                    android:textSize="30sp" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_close_weekend_time"
                    android:layout_height="wrap_content">
                </NumberPicker>

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:id="@+id/picker_vendor_close_weekend_period"
                    android:layout_height="wrap_content">
                </NumberPicker>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="0.03"
                android:text="@string/Menu"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/BLACK"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/vendor_add_menu_item_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:drawable/ic_input_add"/>
        </RelativeLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Item"
                android:textAlignment="center"
                android:textColor="@color/BLACK"
                android:textSize="20sp" />

            <TextView
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="Price"
                android:textAlignment="center"
                android:textColor="@color/BLACK"
                android:textSize="20sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:clickable="true"
            android:divider="@drawable/vendor_horizontal_menu_divider"
            android:elevation="24dp"
            android:focusable="true"></ListView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="0.03"
            android:text="@string/Reviews"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/BLACK"
            android:textSize="30sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="0.03"
                android:text="@string/large_text_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/BLACK"
                android:textSize="12sp" />


        </RelativeLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
